tests/ui/field_not_pure_clone.stderr
error[E0277]: the trait bound `clone_cell::cell::Cell<i32>: PureClone` is not satisfied
 --> $DIR/field_not_pure_clone.rs:5:8
  |
5 |     x: Cell<i32>,
  |        ^^^^ the trait `PureClone` is not implemented for `clone_cell::cell::Cell<i32>`
  |
  = help: see issue #48214
